commit translated contents

--- a/api/qsharp/microsoft.quantum.arithmetic.sum.yml
+++ b/api/qsharp/microsoft.quantum.arithmetic.sum.yml
@@ -3,8 +3,8 @@ uid: microsoft.quantum.arithmetic.sum
 name: Sum
 type: operation
 namespace: Microsoft.Quantum.Arithmetic
-summary: 实现可逆的 sum 入口。 给定的 qubit 位在 `carryIn` 中进行编码，并在 `summand1` 和 `summand2`中编码两个被加数位，计算 qubit `summand1` 中 `carryIn`、`summand2` 和 `summand2`的按位 xor。
-remarks: 与 `Carry` 操作相比，此操作不会计算执行该操作。
+summary: 实现可逆的 sum 入口。 `carryIn`给定一个以 qubit 编码的传入位，以及在`summand1`和`summand2`中编码的两个被加数位，计算的`carryIn` `summand1`和`summand2`的按位 xor `summand2`。
+remarks: 与`Carry`操作相反，此操作不会计算出执行位。
 syntax: 'operation Sum (carryIn : Qubit, summand1 : Qubit, summand2 : Qubit) : Unit'
 input:
   content: '(carryIn : Qubit, summand1 : Qubit, summand2 : Qubit)'
@@ -18,7 +18,7 @@ input:
     isPrimitive: true
     uid: Qubit
   - name: summand2
-    summary: 第二个被加数 qubit 将替换为 `summand1` 和 `summand2`之和的下限。
+    summary: 第二个被加数 qubit 被替换为与`summand1`和`summand2`之和的下位。
     isPrimitive: true
     uid: Qubit
 output:
@@ -30,9 +30,9 @@ functors:
 - Adjoint
 - Controlled
 metadata:
-  ms.openlocfilehash: 125ee44b5debf5d8c83d7fb5176c4298bd702563
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: d72ec97c01944b73ed459afcddbdfb3aa1cf3c49
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73218390"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82681053"
