--- a/api/qsharp/microsoft.quantum.bitwise.rightshiftedl.yml
+++ b/api/qsharp/microsoft.quantum.bitwise.rightshiftedl.yml
@@ -24,19 +24,19 @@ input:
     isPrimitive: true
     uid: BigInt
   - name: amount
-    summary: '`value` 要向右移动的位数。'
+    summary: 要向右移动的位数`value` 。
     isPrimitive: true
     uid: Int
 output:
   content: BigInt
   types:
-  - summary: '`value`的值，则向右移动 `amount` 位。'
+  - summary: 的值`value`，右移一`amount`位。
     isPrimitive: true
     uid: BigInt
 metadata:
-  ms.openlocfilehash: 4c370d859eefdcff5fc844cf55e17adad7b5df86
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: c6a61d838141e86d831bb341a1e077927e580dcc
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73213851"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82680584"
