--- a/api/qsharp/microsoft.quantum.canon.cx.yml
+++ b/api/qsharp/microsoft.quantum.canon.cx.yml
@@ -7,7 +7,7 @@ summary: >-
   将受控的 X （CX）入口应用于一对 qubits。
 
 
-  $ $ \begin{align} 1 & 0 & 0 & 0 \\\\ 0 & 1 & 0 & \\\\ & 0 & 0 & 1 \\0 \end{align}，$ $，其中的行和列组织为 "量程概念" 指南。\\
+  $ $ \begin{align} 1 & 0 & 0 & 0 \\ \\ 0 & 1 & 0 & 0 \\ \\ 0 & 0 & 0 & 1 \\ \\ 0 & 0 & 1 & 0 \end{align}，$ $，其中的行和列组织为 "量程概念" 指南。
 remarks: >-
   等效于：
 
@@ -48,9 +48,9 @@ functors:
 - Adjoint
 - Controlled
 metadata:
-  ms.openlocfilehash: 26cbc8dc2f22cdf8583d453b84e53b0151619f5d
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: d5a987001de638b9415a1d5ede1dc88aee7edf0f
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73067860"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82680299"
