--- a/api/qsharp/microsoft.quantum.simulation.getgeneratorsystemnterms.yml
+++ b/api/qsharp/microsoft.quantum.simulation.getgeneratorsystemnterms.yml
@@ -3,26 +3,26 @@ uid: microsoft.quantum.simulation.getgeneratorsystemnterms
 name: GetGeneratorSystemNTerms
 type: function
 namespace: Microsoft.Quantum.Simulation
-summary: 检索 `GeneratorSystem`中的字词数。
+summary: 检索中的字词数`GeneratorSystem`。
 syntax: 'function GetGeneratorSystemNTerms (generatorSystem : Microsoft.Quantum.Simulation.GeneratorSystem) : Int'
 input:
   content: '(generatorSystem : Microsoft.Quantum.Simulation.GeneratorSystem)'
   types:
   - name: generatorSystem
-    summary: 相关的 `GeneratorSystem`。
+    summary: 有关的 `GeneratorSystem`。
     uid: microsoft.quantum.simulation.generatorsystem
 output:
   content: Int
   types:
-  - summary: '`GeneratorSystem`中的字词数。'
+  - summary: 中的字词数`GeneratorSystem`。
     isPrimitive: true
     uid: Int
 seeAlso:
 - microsoft.quantum.canon.generatorsystem
 metadata:
-  ms.openlocfilehash: 007ef219bee6184197dde34f4594c2534c33ba6a
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: aed94d8dbf5ba97a2b7054cd6ec09a24df7b1a44
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73067452"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82681074"
