--- a/api/qsharp/microsoft.quantum.arrays.foreach.yml
+++ b/api/qsharp/microsoft.quantum.arrays.foreach.yml
@@ -4,13 +4,13 @@ name: ForEach
 type: operation
 namespace: Microsoft.Quantum.Arrays
 summary: 给定为数组元素定义的数组和操作，返回一个新数组，该数组由该操作下的原始数组的图像组成。
-remarks: "此操作是为泛型类型定义的，也就是说，只要有一个数组 `'T[]` 和一个操作 `action : 'T -> 'U` 我们可以映射数组的元素，并生成一个 `'U[]`类型的新数组。"
+remarks: "操作是为泛型类型定义的，也就是说，只要有一个数组`'T[]`和一个操作`action : 'T -> 'U` ，我们就可以映射数组的元素，并生成一个类型`'U[]`为的新数组。"
 syntax: "operation ForEach (action : ('T => 'U), array : 'T[]) : 'U[]"
 input:
   content: "(action : ('T => 'U), array : 'T[])"
   types:
   - name: action
-    summary: 从 `'T` 到应用于每个元素 `'U` 的操作。
+    summary: 从`'T`到`'U`的操作将应用于每个元素。
     isOperation: true
     input:
       types:
@@ -21,26 +21,26 @@ input:
       - uid: "'U"
         isLocal: true
   - name: array
-    summary: "`'T`上的元素的数组。"
+    summary: 上`'T`的元素的数组。
     isArray: true
     uid: "'T"
     isLocal: true
 output:
   content: "'U[]"
   types:
-  - summary: 由 `action` 操作映射的元素 `'U[]` 数组。
+  - summary: 由`action`操作`'U[]`映射的元素的数组。
     isArray: true
     uid: "'U"
     isLocal: true
 typeParameters:
 - uid: "'T"
-  summary: '`array` 元素的类型。'
+  summary: '`array`元素的类型。'
 - uid: "'U"
-  summary: '`action` 操作的结果类型。'
+  summary: '`action`操作的结果类型。'
 metadata:
-  ms.openlocfilehash: 6f61c37fb7a62bcbcfe91768725173e9a919e987
-  ms.sourcegitcommit: ca5015fed409eaf0395a89c2e4bc6a890c360aa2
+  ms.openlocfilehash: af4b6b469017e4cee581a9bdd96ef6171d9b1deb
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 01/29/2020
-  ms.locfileid: "76871016"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82681039"
