--- a/api/qsharp/microsoft.quantum.arrays.indexof.yml
+++ b/api/qsharp/microsoft.quantum.arrays.indexof.yml
@@ -5,7 +5,7 @@ type: function
 namespace: Microsoft.Quantum.Arrays
 summary: 返回满足给定谓词的数组中第一个元素的第一个索引。 如果此类元素不存在，则返回-1。
 examples: >-
-  假定 `IsEven : Int -> Bool` 是在且仅当其输入为偶数时返回 `true` 的函数。 然后，可将其与 `IndexOf` 一起使用，以便查找数组中的第一个偶数元素：
+  假设`IsEven : Int -> Bool`是一个函数，该函数`true`在且仅当其输入为偶数时返回。 然后，可将其与`IndexOf`一起用于查找数组中的第一个偶数元素：
 
 
   ```Q#
@@ -38,13 +38,13 @@ input:
 output:
   content: Int
   types:
-  - summary: 最小索引 `idx` `predicate(arr[idx])` 为 true，如果不存在此类元素，则为-1。
+  - summary: 最小索引`idx` （例如`predicate(arr[idx])` true），如果不存在此类元素，则为-1。
     isPrimitive: true
     uid: Int
 metadata:
-  ms.openlocfilehash: 6f7fee40a558e7bb17b94c9dd58656c6f34ceac8
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 6fb95357096751e53f601a9c855ff656e2dd1b34
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73218186"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82681003"
