--- a/api/qsharp/microsoft.quantum.arrays.partitioned.yml
+++ b/api/qsharp/microsoft.quantum.arrays.partitioned.yml
@@ -29,16 +29,16 @@ input:
 output:
   content: "'T[][]"
   types:
-  - summary: 多个数组，其中第一个数组是 `arr` 的第一个 `nElements[0]`，第二个数组是 `arr` 等的下一个 `nElements[1]`。最后一个数组将包含所有剩余元素。
+  - summary: 多个数组，其中第一个数组是`nElements[0]`第`arr`一个数组，第二`nElements[1]`个数组是`arr`等。最后一个数组将包含所有剩余元素。
     isArray: true
     types:
     - isArray: true
       uid: "'T"
       isLocal: true
 metadata:
-  ms.openlocfilehash: 6e26d4d49f50c8e9ee4c18681f88272a45d2ef20
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 319147f72f0ef13a942ab5440a51f60d6f2bae1f
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73218084"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82680881"
