--- a/api/qsharp/microsoft.quantum.bitwise.leftshiftedi.yml
+++ b/api/qsharp/microsoft.quantum.bitwise.leftshiftedi.yml
@@ -24,19 +24,19 @@ input:
     isPrimitive: true
     uid: Int
   - name: amount
-    summary: '`value` 要向左移动的位数。'
+    summary: 要向左移动的位数`value` 。
     isPrimitive: true
     uid: Int
 output:
   content: Int
   types:
-  - summary: '`value`的值，由 `amount` 位向左移动。'
+  - summary: 的值`value`，按`amount`位向左移动。
     isPrimitive: true
     uid: Int
 metadata:
-  ms.openlocfilehash: d260f2d39e94d0448df739f324f9760013d9bbd3
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: e63653304eced80526b26e0ad05d1e4ed4aeb682
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73214089"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82680695"
