--- a/api/qsharp/microsoft.quantum.bitwise.rightshiftedi.yml
+++ b/api/qsharp/microsoft.quantum.bitwise.rightshiftedi.yml
@@ -24,19 +24,19 @@ input:
     isPrimitive: true
     uid: Int
   - name: amount
-    summary: '`value` 要向右移动的位数。'
+    summary: 要向右移动的位数`value` 。
     isPrimitive: true
     uid: Int
 output:
   content: Int
   types:
-  - summary: '`value`的值，则向右移动 `amount` 位。'
+  - summary: 的值`value`，右移一`amount`位。
     isPrimitive: true
     uid: Int
 metadata:
-  ms.openlocfilehash: 801e07c06b8af34385fb80badf4dfebb503c982d
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 9bf08ce00efc1bc93397c25c1a3ddd4d2432721d
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73217744"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82680611"
