--- a/api/qsharp/microsoft.quantum.bitwise.xbits.yml
+++ b/api/qsharp/microsoft.quantum.bitwise.xbits.yml
@@ -4,7 +4,7 @@ name: XBits
 type: function
 namespace: Microsoft.Quantum.Bitwise
 summary: 返回一个整数，该整数表示 Pauli 运算符数组的 X 位。
-remarks: 如果 `paulis` 数组的长度大于63，则函数将引发。
+remarks: 如果`paulis`数组的长度大于63，则函数将引发。
 syntax: 'function XBits (paulis : Pauli[]) : Int'
 input:
   content: '(paulis : Pauli[])'
@@ -17,15 +17,15 @@ input:
 output:
   content: Int
   types:
-  - summary: 一个整数 $x $，其二进制表示法 $ （p_{62}\,p_{61}\,\dots ..\,p_0） $，其中 $p _i = $0 如果 `paulis[i]` 为 `PauliI` 或 `PauliZ`，其中 $p _i = $1 （如果 `paulis[i]` 为 `PauliX`或 `PauliY`。
+  - summary: 一个整数 $x $，其中二进制表示 $ （{62}\,p_{61}\,p_\,\dots .. p_0） $，其中 $p _i = $0 `paulis[i]`如果`PauliI`为`PauliZ` or，其中 $p _i = $1 `paulis[i]` （ `PauliX`如果`PauliY`为或）。
     isPrimitive: true
     uid: Int
 seeAlso:
 - zbits
 metadata:
-  ms.openlocfilehash: 9319e664aaa7af3ea500bd5bee78c09a92d9573b
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 0dccf94d895984b3661790b44f10455fce35331d
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73217727"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82680570"
