--- a/api/qsharp/microsoft.quantum.canon.applyand.yml
+++ b/api/qsharp/microsoft.quantum.canon.applyand.yml
@@ -7,10 +7,10 @@ summary: >-
   当且仅当两个控件 qubits 都处于1状态时，使用度量来执行 adjoint 操作，以反转给定的目标 qubit。
 
 
-  如果且仅当这两个控件都为1，但假定 `target` 处于状态0，则反转 `target`。  操作具有 T 计数4、T 深度2和不需要 helper qubit，因此，如果已知 `target` 为0，则可能更适合 CCNOT 操作。  此操作的 adjoint 是基于度量的，不需要任何 T 入口。
+  当`target`且仅当这两个控件都为1，但`target`假定处于状态0时，则反转。  操作具有 T 计数4、T 深度2和不需要 helper qubit，因此，如果`target`已知为0，则可能更适合 CCNOT 操作。  此操作的 adjoint 是基于度量的，不需要任何 T 入口。
 
 
-  此操作的受控应用程序不需要 helper qubit、`2^c` `Rz` 的入口，并且没有深度优化，其中 `c` 是包括 `ApplyAnd` 操作中两个控件的总体控制 qubits 的数目。  受 adjoint 控制的应用程序需要 `2^c - 1` 的 `Rz` 入口（使用两倍于非 adjoint 操作大小的两倍），无助手 qubit，不是深度优化。
+  此操作的受控应用程序不需要 helper qubit、 `2^c` `Rz`入口和未进行深度优化，其中`c`是包括`ApplyAnd`操作中两个控件的总体控制 qubits 的数目。  Adjoint 控制的应用程序`2^c - 1` `Rz`需要入口（使用两倍于非 adjoint 操作大小的两倍），无助手 qubit，不能进行深度优化。
 syntax: 'operation ApplyAnd (control1 : Qubit, control2 : Qubit, target : Qubit) : Unit'
 references: >-
   - Cody： "容错 Toffoli 入口的 Novel 构造"，Phys. A 87，022328，2013 [arXiv： 1212.5069](https://arxiv.org/abs/1212.5069) doi>10.1145： 10.1103/PhysRevA 87.022328
@@ -42,9 +42,9 @@ functors:
 - Adjoint
 - Controlled
 metadata:
-  ms.openlocfilehash: 7cde3dbbd33ff482609bbaaccb15e4c7b1bc536e
-  ms.sourcegitcommit: ca5015fed409eaf0395a89c2e4bc6a890c360aa2
+  ms.openlocfilehash: 973f7f618154720396be0bb4a01b52d763ccdd1c
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 01/29/2020
-  ms.locfileid: "76872982"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82680543"
