--- a/api/qsharp/microsoft.quantum.canon.applytosubregisterca.yml
+++ b/api/qsharp/microsoft.quantum.canon.applytosubregisterca.yml
@@ -6,7 +6,7 @@ namespace: Microsoft.Quantum.Canon
 summary: >-
   将操作应用于寄存器的 subregister，其 qubits 由其索引数组指定。
 
-  修饰符 `CA` 指示操作可控制和 adjointable。
+  修饰符`CA`指示该操作是可控制的且 adjointable。
 syntax: 'operation ApplyToSubregisterCA (op : (Qubit[] => Unit is Ctl + Adj), idxs : Int[], target : Qubit[]) : Unit'
 input:
   content: '(op : (Qubit[] => Unit is Ctl + Adj), idxs : Int[], target : Qubit[])'
@@ -47,9 +47,9 @@ functors:
 seeAlso:
 - microsoft.quantum.canon.applytosubregister
 metadata:
-  ms.openlocfilehash: c6cdf7445a37b4af1d585d13a7c1e379c1b96aaf
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 1485fbd3d4b8ba5ba85736d7903aa7e42d36c20f
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73212865"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82680389"
