--- a/api/qsharp/microsoft.quantum.canon.decomposedintotimestepsca.yml
+++ b/api/qsharp/microsoft.quantum.canon.decomposedintotimestepsca.yml
@@ -5,15 +5,15 @@ type: function
 namespace: Microsoft.Quantum.Canon
 summary: 返回为给定操作实现 Trotter – Suzuki 集成器的操作。
 remarks: >-
-  当使用等于 `1`的 `order` 调用时，此函数将返回一个操作，该操作可由最低顺序 Trotter – Suzuki 集成器 $ $ \begin{align} S_1 （\lambda） = \ prod_ {j = 1} ^ {m} e ^ {H_j \lambda}，\end{align} $ $，我们已遵循[quant/0508139](https://arxiv.org/abs/quant-ph/0508139)的表示法，并让 $ \lambda $ 成为演化时间（由返回的操作的第一个输入表示），并让 $\{H_j\}_ {j = 1} ^ {m} $ 是要集成的（扭曲-Hermitian） dynamical 生成器的集合该 `op(j, lambda, _)` 由单一操作员模拟 $e ^ {H_j \lambda} $。
+  `order`当使用等于时`1`，此函数将返回一个操作，该操作可由最低顺序 Trotter – Suzuki 集成器 $ $ \begin{align} S_1 （\lambda） = \ prod_ {j = 1} ^ {m} e ^ {H_j \lambda}，\end{align} $ $，我们已遵循[quant/0508139](https://arxiv.org/abs/quant-ph/0508139)的表示法，并让 $ \lambda $ 成为演化时间（由返回的操作的第一个输入表示），并让 $\{H_j\}_ {j = 1} ^ {m} $ 是要集成的（Hermitian） dynamical 生成器集，以便`op(j, lambda, _)`通过单一操作员模拟 $e ^ {H_j \lambda} $。
 
 
-  同样，`2` 的 `order` 返回第二顺序对称 Trotter – Suzuki 集成器 $ $ \begin{align} S_2 （\lambda） = \ prod_ {j = 1} ^ {m} e ^ {H_k \lambda/2} \ prod_ {j ' = m} ^{1} e ^ {H_ {j '} \lambda/2}。
+  同样， `order` `2`返回第二顺序对称 Trotter – Suzuki 集成器 $ $ \begin{align} S_2 （\lambda） = \ prod_ {j = 1} ^ {m} e ^ {H_k \lambda/2} \ prod_ {j ' = m} ^{1} e ^ {H_ {j '} \lambda/2}。
 
   \end{align} $ $
 
 
-  `order` 的更高值是使用[quant/0508139](https://arxiv.org/abs/quant-ph/0508139)的递归构造实现的。
+  更高的值`order`是使用[quant/0508139](https://arxiv.org/abs/quant-ph/0508139)的递归构造实现的。
 syntax: "function DecomposedIntoTimeStepsCA ((nSteps : Int, op : ((Int, Double, 'T) => Unit is Adj + Ctl)), trotterOrder : Int) : ((Double, 'T) => Unit is Adj + Ctl)"
 references: '- [*D. Berry，Ahokas，Cleve，Sanders，，*](https://arxiv.org/abs/quant-ph/0508139)'
 input:
@@ -24,7 +24,7 @@ input:
     isPrimitive: true
     uid: Int
   - name: op
-    summary: 接受索引输入（类型 `Int`）和分解的时间输入（类型 `Double`）的操作。
+    summary: 接受索引输入（类型`Int`）和用于分解的时间输入（类型`Double`）的操作。
     isOperation: true
     input:
       types:
@@ -51,7 +51,7 @@ input:
 output:
   content: ((Double, 'T) => Unit is Adj + Ctl)
   types:
-  - summary: 返回一个实现 Trotter – Suzuki 集成器的单一参数，其中第一个参数 `Double` 是集成步骤大小，第二个参数是目标。
+  - summary: 返回一个实现 Trotter – Suzuki 集成器的单一参数，其中第`Double`一个参数是集成步骤大小，第二个参数是目标。
     isOperation: true
     input:
       types:
@@ -68,11 +68,11 @@ output:
     - Controlled
 typeParameters:
 - uid: "'T"
-  summary: 每次步骤应执行的操作的类型;通常 `Qubit[]` 或 `Qubit`。
+  summary: 每次步骤应执行的操作的类型;通常为`Qubit[]`或`Qubit`。
 metadata:
-  ms.openlocfilehash: 66b2d7ca6394f525e8ec0dcb3516776bf91bd0cb
-  ms.sourcegitcommit: ca5015fed409eaf0395a89c2e4bc6a890c360aa2
+  ms.openlocfilehash: 1fdb15e9a28c24ac58f026a89779951b982edb27
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 01/29/2020
-  ms.locfileid: "76873016"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82680256"
