--- a/api/qsharp/microsoft.quantum.canon.delaya.yml
+++ b/api/qsharp/microsoft.quantum.canon.delaya.yml
@@ -9,9 +9,9 @@ summary: >-
 
   给定一个操作和一个对该操作的输入时，只要提供附加输入，就会应用该操作。
 
-  具体而言，表达式 `Delay(op, arg, _)` 是在调用时将 `op` 应用于 `arg` 的操作。
+  具体而言，表达式`Delay(op, arg, _)`是`op` `arg`在调用时应用于的操作。
 
-  Expression `Delay(op,arg,_)` 允许延迟 `op`的应用程序。
+  表达式`Delay(op,arg,_)`允许延迟的应用程序`op`。
 syntax: "operation DelayA (op : ('T => Unit is Adj), arg : 'T, aux : Unit) : Unit"
 input:
   content: "(op : ('T => Unit is Adj), arg : 'T, aux : Unit)"
@@ -51,9 +51,9 @@ seeAlso:
 - microsoft.quantum.canon.delay
 - microsoft.quantum.canon.delayed
 metadata:
-  ms.openlocfilehash: f36930faacf0aa4a1ea87a09fc3018e06e62d7ac
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: d4119e1229ac193ab52ac56c37333560dbbedf9e
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73067792"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82680226"
